--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.kristianjones.snorlabs_a1">
 
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
     <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" /> <!-- Required for 29+. -->
     <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
 
@@ -26,6 +27,9 @@
         <activity android:name=".DynTimerActivity" />
         <activity android:name=".AlarmActivity" />
         <activity android:name=".SleepActivity"/>
+        <activity android:name=".CancelActivity"/>
+        <receiver android:name=".AlertReceiver" />
+        <service android:name=".AlarmService"/>
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
