11th Jan 2023 Started building the countdown service and sleep activity recognition functions. Added the following functions: convertToMilli onStart register of SleepReceiver.java startTracking - sets up the pendingIntent and task to search for activity recognition broadcasts. Added SleepReceiver.java as a separate java class to be consistent with alarm service - this might change. we are entering the receiver but yet to see whether we get a sleep confidence value.

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".SleepActivity"/>
         <activity android:name=".CancelActivity"/>
         <receiver android:name=".AlertReceiver" />
+        <receiver android:name=".SleepReceiver" />
         <service android:name=".AlarmService"/>
         <meta-data
             android:name="preloaded_fonts"
