12 Jan 2023 Added CountdownService.java. The CountdownService starts correctly and with the correct time. There is no if blocker on sleep confidence, just testing if countdown service works. Multiple countdown timers are being started because there is no boolean monitoring if an alarm has already been started. Whenever a broadcast is received, a new CountdownService has started.

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         <receiver android:name=".AlertReceiver" />
         <receiver android:name=".SleepReceiver" />
         <service android:name=".AlarmService"/>
+        <service android:name=".CountdownService"/>
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
