--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".FeedbackActivity"
+            android:parentActivityName=".MainActivity"/>
         <activity android:name=".PermissionActivity"
             android:parentActivityName=".MainActivity"/>
         <activity android:name=".DynTimerActivity"
