--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".FeedbackActivity"
+        <activity android:name=".HelpActivity"
             android:parentActivityName=".MainActivity"/>
         <activity android:name=".PermissionActivity"
             android:parentActivityName=".MainActivity"/>
