--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
         </activity>
         <activity android:name=".HelpActivity"
             android:parentActivityName=".MainActivity"/>
+        <activity android:name=".FeedbackActivity"
+            android:parentActivityName=".MainActivity"/>
         <activity android:name=".PermissionActivity"
             android:parentActivityName=".MainActivity"/>
         <activity android:name=".DynTimerActivity"
